# Crow

./: .gitignore  CMakeLists.txt  MySceneManager.cpp  NetworkService.cpp  ProtocolHandler.h  README.md  SceneManager.cpp  helper.sh
client/: app.py  client.py  httpclient.py  readme.md  scene_pb2.py  scene_pb2_grpc.py
client/crow/: app.py  settings.py
client/crow/domain/: Point.py  Rectangle.py  SceneConfig.py
client/crow/repository/: memrepo.py
client/crow/rest/: sceneconfig.py
client/crow/serializers/: domain_serializer.py
client/crow/shared/: domain_model.py  request_object.py  response_object.py  use_case.py
client/crow/use_cases/: request_object.py  sceneconfig_use_cases.py
client/requirements/: dev.txt  test.txt
include/: AStar.h  DubinsPathItem.h  Graph.h  GraphManager.h  GrpcProtocolHandler.h  HttpProtocolHandler.h  MainWidget.h  MyEllipseItem.h  MyScene.h  MySceneManager.h  NetworkManager.h  NetworkService.h  Obstacle.h  SafeZone.h  SceneData.h  SceneManager.h  SceneService.h  ScrollableView.h  Types.h  dubins.h
old/: GrpcProtocolHandler.cpp
protos/: scene.proto
src/: AStar.cpp  DubinsPathItem.cpp  Graph.cpp  GraphManager.cpp  HttpProtocolHandler.cpp  MainWidget.cpp  MyEllipseItem.cpp  MyScene.cpp  NetworkManager.cpp  Obstacle.cpp  ProtocolHandler.cpp  SafeZone.cpp  SceneData.cpp  SceneService.cpp  ScrollableView.cpp  dubins.cpp  main.cpp
